# ifcloud-storage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
file-uploader/: Cargo.toml
file-uploader/src/: lib.rs
file-uploader/src/layers/: mod.rs  session.rs
file-uploader/src/middlewares/: auth_session.rs  mod.rs
file-uploader/src/routes/: issue.rs  mod.rs  session.rs
file-uploader/src/routes/file/: mod.rs  read.rs  write.rs
file-uploader/src/services/: file_key_service.rs  mod.rs  session_manager.rs  token_manager.rs  token_service.rs
proto/: storage_manager.proto
runner/: Cargo.toml
runner/src/: main.rs
src/: main.rs  rpc.rs  storage_manager.proto
src/layers/: session.rs
src/layers/auth/: mod.rs  session.rs
src/layers/auth/store/: redis_store.rs
src/routes/: issue.rs  mod.rs
src/routes/file/: read.rs  write.rs
src/services/: auth_service.rs  file_key_service.rs  file_manager_service.rs  mod.rs  token_service.rs
src/services/session/: mod.rs
src/services/session/store/: mod.rs
src/services/store/: redis_store.rs
storage-manager/: Cargo.toml  build.rs
storage-manager/proto/: storage_manager.proto
storage-manager/src/: lib.rs
storage-manager/src/services/: manage_file.rs  mod.rs
