[package]
name = "ifcloud-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-sessions = { version = "0.13.0", features = ["private"] }
tower-sessions-redis-store = "0.14.0"
async-trait = "0.1.82"
thiserror = "1.0.63"
anyhow = "1.0.88"
serde = "1.0.210"
serde_json = "1.0.128"
tower = "0.5.1"
redis = { version = "0.27.0", features = ["tokio-comp"] }
dotenv = "0.15.0"
lapin = "2.5.0"
tokio-executor-trait = "2.1.1"
tokio-reactor-trait = "1.1.0"
futures = "0.3.30"
