[package]
name = "file-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
tower-sessions = { version = "0.13.0", features = ["private"] }
tower-sessions-redis-store = "0.14.0"
async-trait = "0.1.82"
thiserror = "1.0.63"
anyhow = "1.0.88"
serde = "1.0.210"
serde_json = "1.0.128"
tower = { version = "0.5.1", features = ["util"] }
redis = { version = "0.27.0", features = ["tokio-comp"] }
dotenv = "0.15.0"
futures = "0.3.30"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
